--- a/changelog.txt
+++ b/changelog.txt
@@ -1,3 +1,13 @@
+1.2 - 12/6/2021
+- #content download button is now keyboard focusable (Issue #2)
+- In the image viewer the header image is denoted with a star symbol
+- Fixed the Started row in the info table having extra space underneath
+- Turned on lazy loading for the image gallery, which significantly improves page performance and reduces bandwidth usage
+- scroll-behavior: smooth actually works now
+- Support for "Unlisted" users
+- Fixed info table flexing to match the height of the players list
+- Removed NameMC note since that isn't going to continue being the case and it looks cleaner without it
+
 1.1 - 12/5/2021
 - Fixed issue where the world items would appear above the backdrop
 - Added "Terralith CO-OP" world and screenshots
