--- a/changelog.txt
+++ b/changelog.txt
@@ -1,3 +1,8 @@
+1.3 - 12/8/2021
+- New Terralith CO-OP screenshots
+- Added a world: Voxel Fields 2
+- #content is scrolled to the top when it is opened
+
 1.2 - 12/6/2021
 - #content download button is now keyboard focusable (Issue #2)
 - In the image viewer the header image is denoted with a star symbol
