--- a/changelog.txt
+++ b/changelog.txt
@@ -1,4 +1,7 @@
-1.10 - 1/20/2022
+1.10.1 - 1/22/2022
+- Fixed issue where the JS was looking in the wrong location for images (I originally reverted a change to the folder structure without changing it back in the code)
+
+1.10 - 1/21/2022
 - Decreased the font size of the "Copy a link" tooltips (12pt -> 11pt) and made their containers match the size of the text
 - Support for image sources and captions
 - Statistics viewer, along with statistics for: Vanilla servor, VF2 Plus, Stone Tool Survival, Create-ish
