--- a/changelog.txt
+++ b/changelog.txt
@@ -1,3 +1,7 @@
+1.15 - 6/3/2022
+- New world: Creative Realm
+- Type: Videos will now display relevant worlds
+
 1.14 - 4/4/2022
 - Fixed some sort/filter options not working
 - Added an active category (when sorting by relevant)
