--- a/changelog.txt
+++ b/changelog.txt
@@ -1,3 +1,6 @@
+1.15.2 - 10/27/2022
+- Updated the footer
+
 1.15.1 - 10/27/2022
 - The navigation buttons and the expand all button in the statistics viewer are now keyboard focusable
 - Fixed statistics navigation overlapping the username on smaller screens
