--- a/changelog.txt
+++ b/changelog.txt
@@ -1,3 +1,6 @@
+2.0 - 3/1/2024   (Unfinished)
+- Website completely redone from scratch to use custom HTML elements and AJAX navigation
+
 1.17 - 2/18/2024
 - Moved screenshots from /images to /
 
